--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL="https://recipe-generator-backend-07g0.onrender.com"
-#VITE_BACKEND_URL=http://127.0.0.1:5000
+#VITE_BACKEND_URL="https://recipe-generator-backend-07g0.onrender.com"
+VITE_BACKEND_URL=http://127.0.0.1:5000
